cmake_minimum_required(VERSION 2.6)
set(PROJ luaturtle)
set(CMAKE_INSTALL_PREFIX ".." CACHE PATH "${PROJ} install prefix" FORCE)
project(${PROJ})
#link_directories(.)
add_definitions( -DBOOST_ALL_NO_LIB )
include_directories(.)
#source_group("${PROJ}" FILES ${PROJ}.cpp)
set(SOURCES)
set(SOURCES ${SOURCES} ${PROJ}.cpp)
set(SOURCES ${SOURCES} Tga.cpp)
add_executable(${PROJ} ${SOURCES})
target_link_libraries(${PROJ} general lua) # optimized debug
IF(UNIX)
target_link_libraries(${PROJ} general dl) # optimized debug
ENDIF(UNIX)
install (TARGETS ${PROJ} DESTINATION bin)
